Prevent late font layout shifts

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,11 @@
 @source "../src";
 @source not "../src/components/ui";
 
+/* Keep text visible without allowing a late webfont swap to reflow the page. */
 @font-face {
   font-family: "Lora Variable";
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
   font-weight: 400 700;
   src: url("../node_modules/@fontsource-variable/lora/files/lora-latin-wght-normal.woff2")
     format("woff2-variations");
@@ -17,7 +18,7 @@
 @font-face {
   font-family: "Lora Variable";
   font-style: italic;
-  font-display: swap;
+  font-display: optional;
   font-weight: 400 700;
   src: url("../node_modules/@fontsource-variable/lora/files/lora-latin-wght-italic.woff2")
     format("woff2-variations");
@@ -29,7 +30,7 @@
 @font-face {
   font-family: "Newsreader Variable";
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
   font-weight: 200 800;
   src: url("../node_modules/@fontsource-variable/newsreader/files/newsreader-latin-wght-normal.woff2")
     format("woff2-variations");
@@ -41,7 +42,7 @@
 @font-face {
   font-family: "Newsreader Variable";
   font-style: italic;
-  font-display: swap;
+  font-display: optional;
   font-weight: 200 800;
   src: url("../node_modules/@fontsource-variable/newsreader/files/newsreader-latin-wght-italic.woff2")
     format("woff2-variations");
@@ -53,7 +54,7 @@
 @font-face {
   font-family: "JetBrains Mono Variable";
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
   font-weight: 100 800;
   src: url("../node_modules/@fontsource-variable/jetbrains-mono/files/jetbrains-mono-latin-wght-normal.woff2")
     format("woff2-variations");
